# python-desing-patterns

./: pyproject.toml
behavioural/: chain_of_responsibility.py
behavioural/.ipynb_checkpoints/: chain_of_responsibility-checkpoint.ipynb  observer-checkpoint.ipynb
structural/: adapter.ipynb
