[tool.poetry]
name = "python-desing-patterns"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkan.ercan@b2metric.com>"]
readme = "README.md"
packages = [{include = "python_desing_patterns"}]

[tool.poetry.dependencies]
python = "3.8.10"
jupyterlab = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
